--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.tmobile.qvxp.internal.pdx</groupId>
 	<artifactId>custompdx3</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.4-SNAPSHOT</version>
 
 
 	<properties>
@@ -62,11 +62,11 @@
 		<!-- <version>2.7.17</version> -->
 		<!-- </dependency> -->
 		<!-- https://mvnrepository.com/artifact/com.sun.xml.messaging.saaj/saaj-impl -->
-		<dependency>
-			<groupId>com.sun.xml.messaging.saaj</groupId>
-			<artifactId>saaj-impl</artifactId>
-			<version>1.3</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>com.sun.xml.messaging.saaj</groupId> -->
+		<!-- <artifactId>saaj-impl</artifactId> -->
+		<!-- <version>1.3</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>javax.xml.soap</groupId>
 			<artifactId>javax.xml.soap-api</artifactId>
