--- a/pom.xml
+++ b/pom.xml
@@ -34,39 +34,21 @@
 	</build>
 
 	<dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 		<dependency>
 			<groupId>io.pivotal.gemfire</groupId>
 			<artifactId>geode-core</artifactId>
 			<version>${geode_version}</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.apache.geode</groupId> -->
-		<!-- <artifactId>geode-core</artifactId> -->
-		<!-- <version>1.6.0</version> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.8.1</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.apache.axis</groupId> -->
-		<!-- <artifactId>axis</artifactId> -->
-		<!-- <version>1.4</version> -->
-		<!-- </dependency> -->
-		<!-- https://mvnrepository.com/artifact/javax.xml/saaj-api -->
-		<!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-api -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.apache.cxf</groupId> -->
-		<!-- <artifactId>cxf-api</artifactId> -->
-		<!-- <version>2.7.17</version> -->
-		<!-- </dependency> -->
-		<!-- https://mvnrepository.com/artifact/com.sun.xml.messaging.saaj/saaj-impl -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.sun.xml.messaging.saaj</groupId> -->
-		<!-- <artifactId>saaj-impl</artifactId> -->
-		<!-- <version>1.3</version> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>javax.xml.soap</groupId>
 			<artifactId>javax.xml.soap-api</artifactId>
@@ -89,7 +71,12 @@
 			<scope>system</scope>
 			<systemPath>${java.home}/lib/rt.jar</systemPath>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+    </dependencies>
 
 	<repositories>
 		<repository>
